name:                ian-example
version:             0.1.0.0
synopsis:            example for plotting
author:              Greg Horn
maintainer:          gregmainland@gmail.com
copyright:           Copyright (c) 2013, Greg Horn
category:            Graphics
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:
  .gitignore
  README.md
description:

executable ian-example
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >=4.6 && <5
                       , gtk
                       , Chart
                       , Chart-cairo
--                       , Chart-gtk >= 1.1
                       , data-default-class
                       , lens

  ghc-options:         -threaded -O2

--  ghc-options:      -O2 -Wall
--  ghc-prof-options: -O2 -Wall -prof -fprof-auto -fprof-cafs -rtsopts
